--- a/index.html
+++ b/index.html
@@ -9,18 +9,15 @@
     <!-- Tailwind CSS CDN -->
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
-        /* --- TEMA OSCURO GLOBAL --- */
-        body {
-            font-family: 'Inter', sans-serif;
-            background-color: #18181b;
-            color: #f3f4f6;
-        }
-        header, footer, .bg-white, .scrollable-sidebar, .activity-card, .mobile-menu {
-            background-color: #23232a !important;
+        /* RESET Y BASE PARA TEMA OSCURO */
+        html, body {
+            background: #18181b !important;
             color: #f3f4f6 !important;
+            font-family: 'Inter', sans-serif;
         }
-        .rounded-3xl, .rounded-b-3xl, .rounded-t-3xl, .rounded-xl, .rounded-xl, .rounded-xl, .rounded-xl {
-            border-radius: 1.5rem !important;
+        header, footer, .bg-white, .scrollable-sidebar, .activity-card, .mobile-menu, .edit-day-form, .rounded-3xl, .rounded-b-3xl, .rounded-t-3xl, .rounded-xl {
+            background: #23232a !important;
+            color: #f3f4f6 !important;
         }
         .border, .border-neutral-200, .border-blue-200, .border-neutral-300 {
             border-color: #27272a !important;
@@ -33,12 +30,12 @@
             border-bottom: 1px solid #27272a !important;
         }
         .activity-card {
-            background-color: #23232a !important;
+            background: #23232a !important;
             border-color: #6366f1 !important;
             box-shadow: 0 4px 10px rgba(99, 102, 241, 0.15) !important;
         }
         .activity-card:hover {
-            background-color: #27272a !important;
+            background: #27272a !important;
         }
         .calendar-day-number {
             color: #facc15 !important;
@@ -50,41 +47,41 @@
             color: #a1a1aa !important;
         }
         .view-toggle-button, .edit-button, .save-button, .cancel-button {
-            background-color: #4f46e5 !important;
+            background: #4f46e5 !important;
             color: #f3f4f6 !important;
             border: none !important;
             box-shadow: 0 4px 8px rgba(79,70,229,0.15) !important;
             transition: background 0.2s, transform 0.2s, box-shadow 0.2s;
         }
         .view-toggle-button:hover, .edit-button:hover, .save-button:hover, .cancel-button:hover {
-            background-color: #6366f1 !important;
+            background: #6366f1 !important;
             transform: translateY(-2px) scale(1.03);
             box-shadow: 0 6px 16px rgba(99,102,241,0.25) !important;
         }
         .edit-button, .save-button {
-            background-color: #10b981 !important;
+            background: #10b981 !important;
         }
         .edit-button:hover, .save-button:hover {
-            background-color: #059669 !important;
+            background: #059669 !important;
         }
         .cancel-button {
-            background-color: #ef4444 !important;
+            background: #ef4444 !important;
         }
         .cancel-button:hover {
-            background-color: #b91c1c !important;
+            background: #b91c1c !important;
         }
         .form-input, .form-textarea {
-            background-color: #18181b !important;
+            background: #18181b !important;
             color: #f3f4f6 !important;
             border: 1px solid #27272a !important;
         }
         .form-input:focus, .form-textarea:focus {
             outline: 2px solid #6366f1 !important;
-            background-color: #23232a !important;
+            background: #23232a !important;
         }
         /* Menú hamburguesa e overlay en oscuro */
         .mobile-menu {
-            background-color: #23232a !important;
+            background: #23232a !important;
         }
         .mobile-menu-overlay {
             background: rgba(24,24,27,0.7) !important;
@@ -119,198 +116,69 @@
             background: #6366f1;
             border-radius: 4px;
         }
-        /* Base styles for a clean, modern look */
-        body {
-            font-family: 'Inter', sans-serif;
-            background-color: #f8fafc; /* Very light background for ample white space */
-            color: #333; /* Darker text for contrast */
+        /* --- RESPONSIVIDAD MEJORADA --- */
+        main, .main-content, .scrollable-sidebar, .activity-cards-container, .activity-card, section, aside {
+            box-sizing: border-box;
         }
-        .scrollable-sidebar {
-            /* Allows the sidebar to scroll if content overflows */
-            max-height: calc(100vh - 4rem);
-            overflow-y: auto;
-            -ms-overflow-style: none;  /* IE and Edge */
-            scrollbar-width: none;  /* Firefox */
+        main {
+            padding: 1rem !important;
+            gap: 1rem !important;
         }
-        .scrollable-sidebar::-webkit-scrollbar {
-            display: none; /* Chrome, Safari, Opera*/
-        }
-
-        /* Styling for navigation buttons */
-        .day-button {
-            transition: all 0.2s ease-in-out;
-            box-shadow: 0 1px 3px rgba(0,0,0,0.08); /* Subtle shadow for depth */
-            border: 1px solid #e2e8f0; /* Light border */
-        }
-        .day-button:hover {
-            background-color: #e0e7ff; /* Light blue on hover */
-            transform: translateY(-1px); /* Slight lift effect */
-            box-shadow: 0 4px 8px rgba(0,0,0,0.1);
-        }
-        .day-button.active {
-            background-color: #4f46e5; /* Deep indigo for active state */
-            color: white;
-            font-weight: 600;
-            transform: translateY(-2px); /* More pronounced lift */
-            box-shadow: 0 6px 12px rgba(0,0,0,0.2);
-            border-color: #4f46e5;
-        }
-        .part-title {
-            color: #4a5568; /* Darker gray for section titles */
-            font-weight: 700;
-            margin-top: 2rem;
-            margin-bottom: 0.75rem;
-            padding-left: 1rem;
-            border-bottom: 1px solid #cbd5e0; /* Subtle separator */
-            padding-bottom: 0.5rem;
-            font-size: 1.5rem; /* Larger font for titles */
-        }
-
-        /* Calendar specific styles (now for activity cards) */
-        .activity-cards-container {
-            display: flex; /* Use flexbox for wrapping cards */
-            flex-wrap: wrap; /* Allow cards to wrap to the next line */
-            gap: 1.5rem; /* Increased gap for more white space between cards */
-            justify-content: center; /* Center cards horizontally */
-            align-items: flex-start; /* Align cards to the top */
-        }
-
-        .activity-card {
-            width: calc(33.333% - 1rem); /* Approx 3 cards per row on desktop, adjust as needed */
-            min-width: 280px; /* Minimum width for cards */
-            max-width: 350px; /* Maximum width for cards */
-            padding: 18px 8px; /* More padding */
-            border: 1px solid #e2e8f0;
-            border-radius: 0.75rem; /* More rounded corners */
-            cursor: pointer;
-            transition: all 0.2s ease-in-out;
-            background-color: #ffffff;
-            box-shadow: 0 2px 6px rgba(0,0,0,0.08); /* Soft shadow */
-            display: flex;
-            flex-direction: column;
-            justify-content: space-between;
-            min-height: 130px; /* Taller cells */
-            border-color: #6366f1; /* Indigo border */
-            box-shadow: 0 4px 10px rgba(99, 102, 241, 0.2); /* More pronounced shadow */
+        @media (max-width: 1024px) {
+            main {
+                flex-direction: column !important;
+                gap: 1.5rem !important;
+            }
+            .scrollable-sidebar {
+                max-height: none !important;
+            }
         }
         @media (max-width: 768px) {
+            main {
+                padding: 0.5rem !important;
+            }
+            .scrollable-sidebar, aside {
+                padding: 1rem !important;
+                border-radius: 1rem !important;
+            }
+            section {
+                padding: 1rem !important;
+                border-radius: 1rem !important;
+            }
             .activity-card {
-                width: calc(50% - 1rem); /* 2 cards per row on tablet */
+                min-width: 90vw !important;
+                max-width: 98vw !important;
+                width: 100% !important;
+                margin: 0 auto 1rem auto !important;
+                padding: 1rem 0.5rem !important;
+            }
+            .activity-cards-container {
+                gap: 0.5rem !important;
+                padding: 0.5rem !important;
             }
         }
         @media (max-width: 480px) {
             .activity-card {
-                width: 100%; /* 1 card per row on mobile */
+                min-width: 98vw !important;
+                max-width: 100vw !important;
+                padding: 0.5rem 0.2rem !important;
+            }
+            .scrollable-sidebar, aside, section {
+                padding: 0.5rem !important;
             }
         }
-
-        .activity-card:hover {
-            background-color: #f0f4f8; /* Lighter hover */
-            transform: translateY(-2px);
-            box-shadow: 0 4px 10px rgba(0,0,0,0.12);
+        /* --- FIN RESPONSIVIDAD --- */
+        /* --- ARREGLO DE COLORES DE TEXTO Y SVG --- */
+        h1, h2, h3, h4, h5, h6, label, .text-gray-800, .text-gray-900, .text-gray-700, .text-gray-600, .text-blue-600, .text-blue-800, .text-green-600, .text-green-500, .text-indigo-700, .text-gray-500 {
+            color: #f3f4f6 !important;
         }
-
-        .activity-card .calendar-day-number {
-            font-size: 1.5rem; /* Larger day number */
-            font-weight: bold;
-            color: #1a202c; /* Darker number */
-            margin-bottom: 8px;
+        .text-blue-500, .text-green-500, .text-indigo-700, .text-blue-600, .text-blue-800, .text-green-600, .text-green-500, .text-indigo-700 {
+            color: #818cf8 !important;
         }
-        .activity-card .calendar-day-activities {
-            font-size: 0.9rem; /* Slightly larger activity text */
-            color: #4a5568;
-            max-height: 50px; /* Increased height for text */
-            overflow: hidden;
-            text-overflow: ellipsis;
-            display: -webkit-box;
-            -webkit-line-clamp: 2;
-            -webkit-box-orient: vertical;
+        svg {
+            color: #a5b4fc !important;
         }
-        .no-activities-message {
-            text-align: center;
-            padding: 2rem;
-            color: #6b7280;
-            font-size: 1.25rem;
-        }
-
-        /* Styles for the toggle and edit buttons */
-        .view-toggle-button, .edit-button {
-            background-color: #4f46e5; /* Deep indigo */
-            color: white;
-            padding: 1rem 2rem;
-            border-radius: 0.75rem;
-            font-weight: 600;
-            font-size: 1.125rem;
-            transition: all 0.2s ease-in-out;
-            box-shadow: 0 4px 8px rgba(0,0,0,0.1);
-            border: none; /* Ensure no default border */
-            cursor: pointer;
-        }
-        .view-toggle-button:hover, .edit-button:hover {
-            background-color: #4338ca; /* Darker indigo on hover */
-            transform: translateY(-1px);
-            box-shadow: 0 6px 12px rgba(0,0,0,0.15);
-        }
-        .edit-button { /* Specific override for edit button color */
-            background-color: #10b981; /* Green for edit */
-        }
-        .edit-button:hover {
-            background-color: #059669; /* Darker green */
-        }
-
-        /* --- INICIO: Menú hamburguesa para móvil --- */
-        .mobile-hamburger {
-            display: none;
-        }
-        .mobile-menu-overlay {
-            display: none;
-        }
-        @media (max-width: 768px) {
-            .mobile-hamburger {
-                display: block;
-                position: absolute;
-                top: 1.5rem;
-                right: 1.5rem;
-                z-index: 50;
-                background: none;
-                border: none;
-                padding: 0.5rem;
-            }
-            .sidebar-buttons-mobile-hidden {
-                display: none !important;
-            }
-            .mobile-menu-overlay {
-                display: block;
-                position: fixed;
-                top: 0;
-                left: 0;
-                width: 100vw;
-                height: 100vh;
-                background: rgba(0,0,0,0.3);
-                z-index: 49;
-            }
-            .mobile-menu {
-                position: fixed;
-                top: 0;
-                left: 0;
-                width: 75vw;
-                max-width: 320px;
-                height: 100vh;
-                background: #fff;
-                box-shadow: 2px 0 16px rgba(0,0,0,0.15);
-                z-index: 50;
-                padding: 2rem 1.5rem;
-                display: flex;
-                flex-direction: column;
-                gap: 1.5rem;
-                transform: translateX(-100%);
-                transition: transform 0.3s cubic-bezier(.4,0,.2,1);
-            }
-            .mobile-menu.open {
-                transform: translateX(0);
-            }
-        }
-        /* --- FIN: Menú hamburguesa para móvil --- */
+        /* --- FIN ARREGLO DE COLORES --- */
     </style>
 </head>
 <body class="flex flex-col min-h-screen">
@@ -1178,6 +1046,4 @@
         }
     </script>
 </body>
-</html>
-
 </html>
