--- a/index.html
+++ b/index.html
@@ -161,6 +161,60 @@
             #day-navigation {
                 display: none !important;
             }
+            .mobile-menu {
+                width: 100vw !important;
+                max-width: 100vw !important;
+                left: 0 !important;
+                top: 0 !important;
+                height: 100vh !important;
+                border-radius: 0 !important;
+                box-shadow: none !important;
+                padding: 2rem 1rem 1rem 1rem !important;
+                display: flex;
+                flex-direction: column;
+                gap: 0;
+                z-index: 100;
+            }
+            .mobile-menu-content {
+                display: flex;
+                flex-direction: column;
+                gap: 2rem;
+                height: 100%;
+            }
+            .mobile-menu-actions {
+                display: flex;
+                flex-direction: column;
+                gap: 1rem;
+                margin-bottom: 2rem;
+            }
+            .mobile-menu-days {
+                flex: 1 1 0;
+                overflow-y: auto;
+                background: none;
+                padding-bottom: 1rem;
+            }
+            .mobile-menu-days .part-title {
+                margin-top: 1.5rem;
+                margin-bottom: 0.5rem;
+                font-size: 1.2rem;
+                padding-left: 0.5rem;
+            }
+            .mobile-menu-days button.day-button {
+                width: 100%;
+                margin-bottom: 0.5rem;
+                font-size: 1.1rem;
+                padding: 0.9rem 1rem;
+                border-radius: 0.75rem;
+            }
+            #close-mobile-menu {
+                position: absolute;
+                top: 1.2rem;
+                right: 1.2rem;
+                z-index: 101;
+                background: none;
+                border: none;
+                padding: 0.5rem;
+            }
         }
         @media (max-width: 480px) {
             .activity-card {
@@ -201,12 +255,16 @@
         <!-- Overlay y menú lateral para móvil -->
         <div id="mobile-menu-overlay" class="mobile-menu-overlay" style="display:none;"></div>
         <nav id="mobile-menu" class="mobile-menu" style="display:none;" aria-label="Menú principal">
-            <button id="close-mobile-menu" class="mb-8 self-end" aria-label="Cerrar menú" tabindex="0">
-                <svg xmlns="http://www.w3.org/2000/svg" class="h-8 w-8 text-gray-700" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12"/></svg>
+            <button id="close-mobile-menu" aria-label="Cerrar menú" tabindex="0">
+                <svg xmlns="http://www.w3.org/2000/svg" class="h-10 w-10 text-gray-700" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12"/></svg>
             </button>
-            <button id="mobile-toggle-view-button" class="view-toggle-button w-full mb-4" tabindex="0">Ver Calendario</button>
-            <button id="mobile-edit-day-button" class="edit-button w-full mb-6" tabindex="0">Editar Día</button>
-            <div id="mobile-day-navigation" class="flex flex-col gap-2"></div>
+            <div class="mobile-menu-content">
+                <div class="mobile-menu-actions">
+                    <button id="mobile-toggle-view-button" class="view-toggle-button w-full" tabindex="0">Ver Calendario</button>
+                    <button id="mobile-edit-day-button" class="edit-button w-full" tabindex="0">Editar Día</button>
+                </div>
+                <div class="mobile-menu-days" id="mobile-day-navigation"></div>
+            </div>
         </nav>
         <!-- Sidebar de navegación -->
         <aside class="w-full md:w-1/4 bg-white p-6 rounded-3xl shadow-xl scrollable-sidebar border border-neutral-200">
