--- a/index.html
+++ b/index.html
@@ -29,13 +29,13 @@
             color: #a5b4fc !important;
             border-bottom: 1px solid #27272a !important;
         }
-        .activity-card {
+        .activity-card, .day-section-card {
             background: #23232a !important;
             border: 2px solid #6366f1 !important;
             color: #f3f4f6 !important;
             box-shadow: 0 4px 24px 0 rgba(99,102,241,0.10) !important;
             border-radius: 1.2rem !important;
-            padding: 1.5rem 1.2rem !important;
+            padding: 1.3rem 1.1rem !important;
             margin-bottom: 1.2rem !important;
             display: flex;
             flex-direction: column;
@@ -43,7 +43,7 @@
             min-width: 0;
             transition: background 0.2s, border 0.2s, color 0.2s, box-shadow 0.2s;
         }
-        .activity-card:hover, .activity-card:focus {
+        .activity-card:hover, .activity-card:focus, .day-section-card:hover, .day-section-card:focus {
             background: #353569 !important;
             border-color: #facc15 !important;
             color: #fff !important;
@@ -177,7 +177,7 @@
                 padding: 1rem !important;
                 border-radius: 1rem !important;
             }
-            .activity-card {
+            .activity-card, .day-section-card {
                 min-width: 100vw !important;
                 max-width: 100vw !important;
                 width: 100vw !important;
@@ -248,9 +248,18 @@
                 border: none;
                 padding: 0.5rem;
             }
+            #day-title, #day-location, .part-title {
+                font-size: 1.3rem !important;
+                margin-bottom: 0.7rem !important;
+                margin-top: 0.7rem !important;
+                padding-left: 0.2rem !important;
+            }
+            .space-y-8 > div, .day-section-card {
+                margin-bottom: 0.7rem !important;
+            }
         }
         @media (max-width: 480px) {
-            .activity-card {
+            .activity-card, .day-section-card {
                 padding: 0.7rem 0.1rem !important;
             }
             .scrollable-sidebar, aside, section {
@@ -364,33 +373,12 @@
             <div id="day-view">
                 <h2 class="text-5xl font-extrabold text-gray-900 mb-4" id="day-title">Selecciona un día para ver los detalles</h2>
                 <h3 class="text-3xl font-bold text-indigo-700 mb-8" id="day-location"></h3>
-
-                <div class="space-y-8 text-gray-800">
-                    <div>
-                        <p class="text-xl font-bold text-blue-600 flex items-center mb-2"><svg xmlns="http://www.w3.org/2000/svg" class="h-7 w-7 mr-3 text-blue-500" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 3v1m0 16v1m9-9h1M3 12H2m15.325-7.757l.707-.707M5.636 18.364l-.707.707M18.364 5.636l.707-.707M5.636 5.636l-.707-.707M15 12a3 3 0 11-6 0 3 3 0 016 0z"/></svg> Mañana:</p>
-                        <p id="activity-morning" class="ml-10 text-lg text-gray-700 mb-2"></p>
-                        <ul id="morning-details" class="ml-16 text-base list-disc list-inside text-gray-600 space-y-1"></ul>
-                    </div>
-                    <div>
-                        <p class="text-xl font-bold text-blue-600 flex items-center mb-2"><svg xmlns="http://www.w3.org/2000/svg" class="h-7 w-7 mr-3 text-blue-500" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M18 12H6M6 12l3-3m-3 3l3 3"/></svg> Tarde:</p>
-                        <p id="activity-afternoon" class="ml-10 text-lg text-gray-700 mb-2"></p>
-                        <ul id="afternoon-details" class="ml-16 text-base list-disc list-inside text-gray-600 space-y-1"></ul>
-                    </div>
-                    <div>
-                        <p class="text-xl font-bold text-blue-600 flex items-center mb-2"><svg xmlns="http://www.w3.org/2000/svg" class="h-7 w-7 mr-3 text-blue-500" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M21 12a9 9 0 11-18 0 9 9 0 0118 0z"/><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 7v5l4 2"/></svg> Noche:</p>
-                        <p id="activity-night" class="ml-10 text-lg text-gray-700 mb-2"></p>
-                        <ul id="night-details" class="ml-16 text-base list-disc list-inside text-gray-600 space-y-1"></ul>
-                    </div>
-                    <div>
-                        <p class="text-xl font-bold text-blue-600 flex items-center mb-2"><svg xmlns="http://www.w3.org/2000/svg" class="h-7 w-7 mr-3 text-blue-500" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M8 14v3m4-3v3m4-3v3M3 21h18M3 10h18M3 7l9-4 9 4M4 10h16v11H4V10z"/></svg> Dormir:</p>
-                        <p id="day-sleep" class="ml-10 text-lg text-gray-700"></p>
-                    </div>
-                    <div class="mt-10">
-                        <p class="text-xl font-bold text-green-600 flex items-center mb-2"><svg xmlns="http://www.w3.org/2000/svg" class="h-7 w-7 mr-3 text-green-500" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 5H7a2 2 0 00-2 2v12a2 2 0 002 2h10a2 2 0 002-2V7a2 2 0 00-2-2h-2M9 5a2 2 0 002 2h2a2 2 0 002-2M9 5a2 2 0 012-2h2a2 2 0 012 2m-3 7h3m-3 4h3m-6-4h.01M9 16h.01"/></svg> Mis Notas:</p>
-                        <textarea id="personal-notes"
-                            class="w-full p-4 mt-2 border border-neutral-300 rounded-xl shadow-sm focus:ring-indigo-500 focus:border-indigo-500 text-gray-700 text-lg transition-all duration-200"
-                            rows="5" placeholder="Escribe aquí tus notas personales para este día..."></textarea>
-                    </div>
+                <div id="day-sections-container"></div>
+                <div class="day-section-card">
+                    <p class="text-xl font-bold text-green-600 flex items-center mb-2"><svg xmlns="http://www.w3.org/2000/svg" class="h-7 w-7 mr-3 text-green-500" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 5H7a2 2 0 00-2 2v12a2 2 0 002 2h10a2 2 0 002-2V7a2 2 0 00-2-2h-2M9 5a2 2 0 002 2h2a2 2 0 002-2M9 5a2 2 0 012-2h2a2 2 0 012 2m-3 7h3m-3 4h3m-6-4h.01M9 16h.01"/></svg> Mis Notas:</p>
+                    <textarea id="personal-notes"
+                        class="w-full p-4 mt-2 border border-neutral-300 rounded-xl shadow-sm focus:ring-indigo-500 focus:border-indigo-500 text-gray-700 text-lg transition-all duration-200"
+                        rows="5" placeholder="Escribe aquí tus notas personales para este día..."></textarea>
                 </div>
             </div>
 
@@ -793,34 +781,69 @@
             // Update main content
             dayTitle.textContent = `${dayData.day} • ${dayData.date} - ${dayData.title}`;
             dayLocation.textContent = dayData.location;
-            activityMorning.textContent = dayData.activities.morning || 'No hay actividades programadas.';
-            activityAfternoon.textContent = dayData.activities.afternoon || 'No hay actividades programadas.';
-            activityNight.textContent = dayData.activities.night || 'No hay actividades programadas.';
-            daySleep.textContent = dayData.sleep;
 
-            // Clear and add additional details
-            morningDetails.innerHTML = '';
-            dayData.details.morning.forEach(detail => {
-                const li = document.createElement('li');
-                li.textContent = detail;
-                morningDetails.appendChild(li);
-            });
+            // Render secciones solo si hay contenido
+            const daySectionsContainer = document.getElementById('day-sections-container');
+            daySectionsContainer.innerHTML = '';
+            // Mañana
+            if (dayData.activities.morning || (dayData.details.morning && dayData.details.morning.length > 0)) {
+                const card = document.createElement('div');
+                card.className = 'day-section-card';
+                card.innerHTML = `
+                    <p class="text-xl font-bold text-blue-600 flex items-center mb-2">
+                        <svg xmlns="http://www.w3.org/2000/svg" class="h-7 w-7 mr-3 text-blue-500" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 3v1m0 16v1m9-9h1M3 12H2m15.325-7.757l.707-.707M5.636 18.364l-.707.707M18.364 5.636l.707-.707M5.636 5.636l-.707-.707M15 12a3 3 0 11-6 0 3 3 0 016 0z"/></svg> Mañana:
+                    </p>
+                    <p class="ml-10 text-lg text-gray-700 mb-2">${dayData.activities.morning || ''}</p>
+                    <ul class="ml-16 text-base list-disc list-inside text-gray-600 space-y-1">
+                        ${(dayData.details.morning || []).map(detail => `<li>${detail}</li>`).join('')}
+                    </ul>
+                `;
+                daySectionsContainer.appendChild(card);
+            }
+            // Tarde
+            if (dayData.activities.afternoon || (dayData.details.afternoon && dayData.details.afternoon.length > 0)) {
+                const card = document.createElement('div');
+                card.className = 'day-section-card';
+                card.innerHTML = `
+                    <p class="text-xl font-bold text-blue-600 flex items-center mb-2">
+                        <svg xmlns="http://www.w3.org/2000/svg" class="h-7 w-7 mr-3 text-blue-500" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M18 12H6M6 12l3-3m-3 3l3 3"/></svg> Tarde:
+                    </p>
+                    <p class="ml-10 text-lg text-gray-700 mb-2">${dayData.activities.afternoon || ''}</p>
+                    <ul class="ml-16 text-base list-disc list-inside text-gray-600 space-y-1">
+                        ${(dayData.details.afternoon || []).map(detail => `<li>${detail}</li>`).join('')}
+                    </ul>
+                `;
+                daySectionsContainer.appendChild(card);
+            }
+            // Noche
+            if (dayData.activities.night || (dayData.details.night && dayData.details.night.length > 0)) {
+                const card = document.createElement('div');
+                card.className = 'day-section-card';
+                card.innerHTML = `
+                    <p class="text-xl font-bold text-blue-600 flex items-center mb-2">
+                        <svg xmlns="http://www.w3.org/2000/svg" class="h-7 w-7 mr-3 text-blue-500" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M21 12a9 9 0 11-18 0 9 9 0 0118 0z"/><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 7v5l4 2"/></svg> Noche:
+                    </p>
+                    <p class="ml-10 text-lg text-gray-700 mb-2">${dayData.activities.night || ''}</p>
+                    <ul class="ml-16 text-base list-disc list-inside text-gray-600 space-y-1">
+                        ${(dayData.details.night || []).map(detail => `<li>${detail}</li>`).join('')}
+                    </ul>
+                `;
+                daySectionsContainer.appendChild(card);
+            }
+            // Dormir
+            if (dayData.sleep) {
+                const card = document.createElement('div');
+                card.className = 'day-section-card';
+                card.innerHTML = `
+                    <p class="text-xl font-bold text-blue-600 flex items-center mb-2">
+                        <svg xmlns="http://www.w3.org/2000/svg" class="h-7 w-7 mr-3 text-blue-500" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M8 14v3m4-3v3m4-3v3M3 21h18M3 10h18M3 7l9-4 9 4M4 10h16v11H4V10z"/></svg> Dormir:
+                    </p>
+                    <p class="ml-10 text-lg text-gray-700">${dayData.sleep}</p>
+                `;
+                daySectionsContainer.appendChild(card);
+            }
 
-            afternoonDetails.innerHTML = '';
-            dayData.details.afternoon.forEach(detail => {
-                const li = document.createElement('li');
-                li.textContent = detail;
-                afternoonDetails.appendChild(li);
-            });
-
-            nightDetails.innerHTML = '';
-            dayData.details.night.forEach(detail => {
-                const li = document.createElement('li');
-                li.textContent = detail;
-                nightDetails.appendChild(li);
-            });
-
-            // Load personal notes
+            // Notas personales
             const savedNotes = localStorage.getItem(`notes-day-${dayIndex}`);
             personalNotes.value = savedNotes || '';
             personalNotes.oninput = () => {
