--- a/index.html
+++ b/index.html
@@ -326,32 +326,55 @@
             margin: 0 !important;
         }
         .activity-cards-container {
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: center;
+            align-items: flex-start;
             background: transparent !important;
             border-radius: 1.2rem !important;
-            width: 100vw !important;
+            width: 100%;
             max-width: 100vw !important;
             margin: 0 auto !important;
             padding: 0 0 1.5rem 0 !important;
             box-sizing: border-box;
+            gap: 1.5rem !important;
         }
         .activity-card {
             border-radius: 1.2rem !important;
+            min-width: 260px !important;
+            max-width: 400px !important;
+            width: 100%;
+            margin: 0 !important;
+            flex: 1 1 320px;
+        }
+        @media (max-width: 1024px) {
+            .activity-cards-container {
+                gap: 1rem !important;
+            }
+            .activity-card {
+                min-width: 220px !important;
+                max-width: 95vw !important;
+            }
         }
         @media (max-width: 768px) {
-            #calendar-view {
-                border-radius: 0 !important;
-                padding: 0 !important;
-            }
             .activity-cards-container {
-                border-radius: 0 !important;
-                width: 100vw !important;
-                max-width: 100vw !important;
-                margin: 0 !important;
+                gap: 0.5rem !important;
                 padding: 0 0 1rem 0 !important;
             }
             .activity-card {
+                min-width: 90vw !important;
+                max-width: 98vw !important;
+                width: 98vw !important;
+                margin: 0 auto 1rem auto !important;
                 border-radius: 1.2rem !important;
-                margin: 0 0 1rem 0 !important;
+            }
+        }
+        @media (max-width: 480px) {
+            .activity-card {
+                min-width: 98vw !important;
+                max-width: 99vw !important;
+                width: 99vw !important;
+                padding: 0.7rem 0.1rem !important;
             }
         }
     </style>
