--- a/index.html
+++ b/index.html
@@ -40,7 +40,11 @@
             display: flex;
             flex-direction: column;
             gap: 0.5rem;
-            min-width: 0;
+            min-width: 240px !important;
+            max-width: 340px !important;
+            width: 96%;
+            margin: 0 !important;
+            flex: 1 1 280px;
             transition: background 0.2s, border 0.2s, color 0.2s, box-shadow 0.2s;
         }
         .activity-card:hover, .activity-card:focus {
@@ -164,6 +168,13 @@
                 border-radius: 1rem !important;
                 padding: 1.2rem 0.7rem !important;
             }
+            .activity-cards-container {
+                gap: 1rem !important;
+            }
+            .activity-card {
+                min-width: 180px !important;
+                max-width: 90vw !important;
+            }
         }
         @media (max-width: 768px) {
             main {
@@ -177,18 +188,21 @@
                 padding: 1rem !important;
                 border-radius: 1rem !important;
             }
-            .activity-card {
-                min-width: 100vw !important;
-                max-width: 100vw !important;
-                width: 100vw !important;
-                border-radius: 0 !important;
-                margin: 0 0 1rem 0 !important;
-                padding: 1.1rem 0.5rem !important;
-                box-shadow: none !important;
-            }
             .activity-cards-container {
-                padding: 0 !important;
-                gap: 0 !important;
+                gap: 0.5rem !important;
+                padding: 0 0 1rem 0 !important;
+            }
+            .activity-card {
+                min-width: 85vw !important;
+                max-width: 92vw !important;
+                width: 92vw !important;
+                margin: 0 auto 1rem auto !important;
+                border-radius: 1.2rem !important;
+                text-align: center !important;
+                align-items: center !important;
+            }
+            .activity-card > * {
+                text-align: center !important;
             }
             .sidebar-buttons-mobile-hidden,
             #day-navigation {
@@ -251,6 +265,9 @@
         }
         @media (max-width: 480px) {
             .activity-card {
+                min-width: 96vw !important;
+                max-width: 98vw !important;
+                width: 98vw !important;
                 padding: 0.7rem 0.1rem !important;
             }
             .scrollable-sidebar, aside, section {
