--- a/index.html
+++ b/index.html
@@ -40,7 +40,6 @@
             display: flex;
             flex-direction: column;
             gap: 0.5rem;
-            min-width: 240px !important;
             max-width: 340px !important;
             width: 96%;
             margin: 0 !important;
@@ -172,7 +171,6 @@
                 gap: 1rem !important;
             }
             .activity-card {
-                min-width: 180px !important;
                 max-width: 90vw !important;
             }
         }
@@ -193,9 +191,8 @@
                 padding: 0 0 1rem 0 !important;
             }
             .activity-card {
-                min-width: 85vw !important;
-                max-width: 92vw !important;
-                width: 92vw !important;
+                width: 85vw !important;
+                max-width: 320px !important;
                 margin: 0 auto 1rem auto !important;
                 border-radius: 1.2rem !important;
                 text-align: center !important;
@@ -265,9 +262,8 @@
         }
         @media (max-width: 480px) {
             .activity-card {
-                min-width: 96vw !important;
+                width: 90vw !important;
                 max-width: 98vw !important;
-                width: 98vw !important;
                 padding: 0.7rem 0.1rem !important;
             }
             .scrollable-sidebar, aside, section {
