--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
                 padding: 0 0 1rem 0 !important;
             }
             .activity-card {
-                width: 85vw !important;
+                width: 80vw !important;
                 max-width: 320px !important;
                 margin: 0 auto 1rem auto !important;
                 border-radius: 1.2rem !important;
@@ -259,6 +259,11 @@
                 border: none;
                 padding: 0.5rem;
             }
+            h1 {
+                font-size: 2rem !important;
+                line-height: 2.4rem !important;
+                padding: 0.5rem 0 !important;
+            }
         }
         @media (max-width: 480px) {
             .activity-card {
@@ -268,6 +273,10 @@
             }
             .scrollable-sidebar, aside, section {
                 padding: 0.5rem !important;
+            }
+            h1 {
+                font-size: 1.4rem !important;
+                line-height: 1.7rem !important;
             }
         }
         /* --- FIN RESPONSIVIDAD --- */
